welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:3: error: illegal start of statement (no modifiers allowed here)
override def run() {
^